--- a/src/components/common/aq-backtest-metric-item.html
+++ b/src/components/common/aq-backtest-metric-item.html
@@ -17,6 +17,9 @@
 			width:100%;
 			border-top: 2px solid #cc6666;;
 			color:#24293d;
+			display: -webkit-flex; 
+            -webkit-flex-wrap: wrap;
+            -webkit-flex-direction: row;
 		}
 
 		#metric {
@@ -29,15 +32,6 @@
 			color: #24293d;
 			font-weight: bold;
 		}
-
-		#metric-card {
-			display: -webkit-flex; /* Safari */
-            -webkit-flex-wrap: wrap;
-            
-            -webkit-flex-direction: row;
-    
-		}
-
     	
      	paper-tooltip {
 	        --paper-tooltip-background: teal; 
