--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -1,6 +1,7 @@
 
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
+<link rel='import' href='../../../bower_components/iron-ajax/iron-ajax.html'>
 
 <link rel="import" href="../aq-markdown-editor.html">
 <link rel="import" href="./aq-community-previewpost.html">
@@ -8,7 +9,7 @@
 
 <link rel='import' href='../common/aq-dropdown.html'>
 <link rel='import' href='../../icons/aq-iconset.html'>
-clear
+
 <dom-module id="aq-community-createpost">
     <style  include="iron-flex iron-flex-alignment iron-positioning"></style>
     
@@ -68,7 +69,7 @@ clear
       #attachButton {
         position:absolute;
         top:195px;
-        right:65px;
+        right:6%;
         z-index: 2;
         background-color: white !important;
         color: teal !important;
