--- a/src/components/community/aq-community-postdetail-reply.html
+++ b/src/components/community/aq-community-postdetail-reply.html
@@ -1,4 +1,6 @@
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel='import' href='../../../bower_components/iron-ajax/iron-ajax.html'>
+
 <link rel='import' href='../../icons/aq-iconset.html'>
 
 <link rel="import" href="../aq-markdown-editor.html">
@@ -14,7 +16,7 @@
 
     #attachButton {    
         margin-bottom: -40px;
-        margin-right: 5px;
+        margin-right: 7px;
         color:teal;
         border:none !important;
         z-index: 2;
