--- a/src/components/aq-aboutpage.html
+++ b/src/components/aq-aboutpage.html
@@ -108,8 +108,8 @@
       margin-bottom: 0px;
       margin-top: 15px;
       font-size: 16px;
-      line-height: 22px;
-      font-style: italic;
+      line-height: 1.45;
+      --font-style: italic;
     }
 
     .tagline {
