--- a/src/components/aq-toolbar.html
+++ b/src/components/aq-toolbar.html
@@ -49,7 +49,8 @@
     }
 
     #logo {
-      content: url(../../../resources/images/Logo.png);
+      background: url(../../../resources/images/Logo.png);
+      background-size: cover;
       height:30px;
       width:42px;
       --background-color: #f2fbf7;
