--- a/src/components/common/aq-backtest-detail-item.html
+++ b/src/components/common/aq-backtest-detail-item.html
@@ -5,6 +5,7 @@
 <link rel='import' href='../../../bower_components/paper-card/paper-card.html'>
 <link rel='import' href='../../../bower_components/iron-signals/iron-signals.html'>
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+<link rel='import' href='../../../bower_components/iron-pages/iron-pages.html'>
 
 <link rel='import' href='./aq-backtest-metric-item.html'>
 
