--- a/src/components/community/aq-community-home-post-item2.html
+++ b/src/components/community/aq-community-home-post-item2.html
@@ -3,6 +3,7 @@
 <link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
+<link rel='import' href='../../../bower_components/paper-card/paper-card.html'>
 <link rel='import' href='../profile-img.html'>
 <link rel="import" href="../help/aq-help-marked-item.html">
 <link rel="import" href="../../icons/aq-iconset.html">
@@ -57,7 +58,7 @@
       border-top: 1px solid #cc6666;
     }
 
-    a {
+    #topicHeading {
       cursor: pointer;
       text-decoration: none;
       font-size: 18px;
@@ -65,7 +66,7 @@
       color:#c3403f;
     }
 
-    a:hover {
+    #topicHeading:hover {
       text-decoration:underline;
     }
 
@@ -140,8 +141,7 @@
       --outline: 1px solid #24293d;
       --margin-left:10px;
     }
-
-
+                        
   </style>
 
   <template>
@@ -149,17 +149,17 @@
       
       <div id='content' class="card-content flex">
 
-        <div  class="container-int header layout horizontal">       
-          <profile-img id='img' class="self-start" letter="[[getInitials(authorFirstname, authorLastname)]]"></profile-img>
+        <div class="container-int header layout horizontal">       
+          <profile-img id='img' class="self-start" letter="[[getInitials(thread.user.firstName, thread.user.lastName)]]"></profile-img>
 
           <div class="layout vertical">
-            <a on-tap='goToDetail'>[[topicHeading]]</a>
-            <span id='category'><i>[[postCategory]]</i> by [[getAuthorFullName(authorFirstname, authorLastname)]]</span><span on [[postDate]]</span>
+            <div id='topicHeading'><a href$='#/dashboard/community/[[thread._id]]'>[[thread.title]]</a></div>
+            <span id='category'><i>[[thread.category]]</i> by [[getAuthorFullName(thread.user.firstName, thread.user.lastName)]] on [[format(thread.createdAt)]]</span>
           </div>
 
           <div class="flex"></div>
 
-           <template is='dom-if' if='[[hasBacktest]]'>
+           <template is='dom-if' if='[[hasBacktest(thread)]]'>
               <iron-icon class="self-center" icon="vaadin-icons:line-bar-chart"></iron-icon>
           </template>
 
@@ -168,53 +168,39 @@
           <paper-icon-button icon="vaadin-icons:external-link" on-tap='goToDetail' title='View Post'></paper-icon-button>   
         </div>   
       
-        <div id='textContent' class="flex"><aq-help-marked-item help-text="[[postContent]]"></aq-help-marked-item> 
+        <div id='textContent' class="flex"><aq-help-marked-item help-text="[[thread.markdownText]]"></aq-help-marked-item> 
         </div> 
 
         <!--div class="flex"></div-->  
-      </div> 
-
+      </div>      
       
       <div id='action' class="card-actions flex">     
         
         <div class="container-int layout horizontal">
           
-          <!--div class="layout vertical metric flex"> 
-            <span class="createdAt bold-span flex">[[postDate]]</span>
-            <span>Created At</span>          
-          </div>  
-
           <div class="layout vertical metric flex"> 
-            <span class="createdAt bold-span"></span>
-            <span>Last Reply At</span>   
-          </div-->
-
-
-
-          <div class="layout vertical metric flex"> 
-            <span class="bold-span">[[totalViews]]</span>
+            <span class="bold-span">[[thread.views]]</span>
             <span>Views</span>               
           </div>
-
-         
-
+                       
           <div class="layout vertical metric flex"> 
-            <span class="bold-span">[[totalReplies]]</span>
+            <span class="bold-span">[[thread.replies.length]]</span>
             <span>Replies</span>   
             
           </div>
 
           <div class="layout vertical metric flex"> 
-            <span class="bold-span">[[totalFollowers]]</span>
+            <span class="bold-span">[[thread.followers.length]]</span>
             <span>Followers</span>             
           </div>
 
            <div id="lastReplyAt" class="layout horizontal"> 
             <div  class="layout vertical metric">    
-                <span class="bold-span">[[getLastReplyDetails(lastreplyAuthor, lastreplyDate)]] </span>  
+                <span class="bold-span">[[getLastReplyDetails(thread)]] </span>  
                <span>Last Reply</span>
             </div> 
-            <template is='dom-if' if="[[!totalReplies]]">
+
+            <template is='dom-if' if="[[!hasReplies(thread)]]">
                 <paper-icon-button class="self-start" id='iconReply' icon="aq-icons:reply" on-tap='goToDetail'></paper-icon-button>
             </template>  
           </div>
@@ -233,20 +219,10 @@
     Polymer ({
       is: 'aq-community-home-post-item2',
       properties: {
-        topicAddress: String,
-        topicHeading: String,
-        authorFirstname: String,
-        authorLastname: String,
-        authorAddress: String,
-        postDate: String,
-        lastreplyAuthor: String,
-        lastreplyDate:String,
-        totalReplies: Number,
-        totalViews: Number,
-        postCategory: String,
-        postContent:String,
-        totalFollowers:Number,
-        hasBacktest:Boolean
+
+        thread: {
+          type: Object,
+        },
       },
 
       getInitials: function(firstName, lastName) {
@@ -254,10 +230,15 @@
       },
 
       goToDetail: function() {
-        this.fire('postdetail-action',{link:this.topicAddress});
+        console.log("Firing");
+        this.fire('postdetail-action',{link:'/dashboard/community/' + this.thread._id});
       },
 
-      getLastReplyDetails: function(lastreplyAuthor, lastreplyDate) {
+      getLastReplyDetails: function(thread) {
+        
+        var lastreplyAuthor = this.getReplyAuthor(thread);
+        var lastreplyDate = this.getReplyDate(thread);
+
         if (lastreplyDate!='' && lastreplyAuthor!='') {
           return lastreplyAuthor + " on " + lastreplyDate;
         } else{
@@ -268,9 +249,49 @@
       getAuthorFullName: function(authorFirstname, authorLastname){
         return authorFirstname+' '+ authorLastname;
       },
+
+      getReplyDate: function(thread) {
+        if (thread.replies.length > 0) {
+          return this.format(thread.replies[thread.replies.length-1].createdAt);
+        } else {
+          return '';
+        }
+      },
+
+      getReplyAuthor: function(thread) {
+         if (thread.replies.length > 0) {
+          var reply = thread.replies[thread.replies.length-1];
+          return reply.user.firstName +" "+ reply.user.lastName;
+        } else {
+          return '';
+        }
+      },
+
+      hasBacktest: function(thread) {
+        if (thread.backtestId){
+          return true;
+        }
+
+        for(i=0;i<thread.replies.length;i++){
+          if(thread.replies[i].backtestId){
+            return true;
+          }
+        }
+
+        return false;
+      },
+
+      format: function(date) {
+        return new Date(date).toLocaleTimeString("en-us", options);
+      },
+
+      hasReplies: function(thread) {
+        return thread.replies && thread.replies.length > 0;
+      },
     
 
     });
   </script>
 
 </dom-module>
+
