--- a/src/components/community/aq-community-home-searchbar.html
+++ b/src/components/community/aq-community-home-searchbar.html
@@ -2,7 +2,7 @@
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 <link rel='import' href='../../../bower_components/paper-radio-group/paper-radio-group.html'>
 <link rel='import' href='../../../bower_components/paper-radio-button/paper-radio-button.html'>
-
+<link rel='import' href='../../../bower_components/paper-tooltip/paper-tooltip.html'>
 
 <dom-module id='aq-community-home-searchbar'>
 	<style  include="iron-flex iron-flex-alignment iron-positioning">
