--- a/src/components/community/aq-community-postdetail-content.html
+++ b/src/components/community/aq-community-postdetail-content.html
@@ -55,13 +55,13 @@
       <div id='author' class="layout horizontal">
         <profile-img id='img' letter="[[getinitials(postContent)]]" class="self-end"></profile-img>
          <div id='author-desc' class="layout vertical self-center">
-              <span id="author-name">{{postContent.user.firstName}} {{postContent.user.lastName}}
-            <i style="color:teal">on {{format(postContent.updatedAt)}}</i></span>
+              <span id="author-name">[[postContent.user.firstName]] [[postContent.user.lastName]]
+            <i style="color:teal">on [[format(postContent.updatedAt)]]</i></span>
           </div>
       </div>
 
 
-      <aq-help-marked-item help-text="{{postContent.markdownText}}"></aq-help-marked-item>
+      <aq-help-marked-item help-text="[[postContent.markdownText]]"></aq-help-marked-item>
 
       <template is='dom-if' if="[[isValidBacktestId(postContent)]]">
           <aq-backtest-detail-item backtest-id="[[getBacktestId(postContent)]]">
